fixed image alignment issues

--- a/src/components/MainGameContainer/MainGameContainer.css
+++ b/src/components/MainGameContainer/MainGameContainer.css
@@ -34,3 +34,7 @@
     padding: 20px 0;
     margin-bottom: 25px;
 }
+
+#cards-container {
+    margin-left:  265px;
+}
