--- a/src/components/MemoryCard/MemoryCard.css
+++ b/src/components/MemoryCard/MemoryCard.css
@@ -1,4 +1,4 @@
-.cards-container {
+#cards-container {
     margin-left:  265px;
 }
 
